[package]
name = "bootstrap-rs"
version = "0.2.1"
authors = ["Thomas Gideon <cmdln@thecommandline.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "~0.16.2"
log = "~0.4.8"
serde_json = "^1.0.40"
serde = "^1.0.98"
anyhow = "^1.0.28"
wasm-bindgen = "~0.2.61"
web-sys = "~0.3.38"
wasm-logger = "~0.2.0"
yew-router = "~0.13.0"
yew-components = "~0.1.2"
